--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 </head>
 <body>
     <script src="js/app.js"></script>
+    <header>
+        <h1>Expedition</h1>
+    </header>
 </body>
 </html>
