--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <body>
     <script src="js/app.js"></script>
     <header>
-        <h1>Expedition</h1>
+        <h1>Adventure </h1>
     </header>
+    <div class="container">
+        <main>
+
+        </main>
+    </div>
+
+    <footer>
+        Made with ♥ @ Udacity
+    </footer>   
 </body>
 </html>
