--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script src="js/app.js"></script>
     <header>
-        <h1>Adventure </h1>
+        <h1>looking adventurous </h1>
     </header>
     <div class="container">
         <main>
