--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
     <script src="js/app.js"></script>
     <header>
-        <h1>looking adventurous </h1>
+        <h1>hi hi master branch heading  </h1>
     </header>
     <div class="container">
         <main>
 
         </main>
     </div>
-<<<<<<< HEAD
     <footer>
         <!-- start of new content -->
         <section>
@@ -35,9 +34,6 @@
         </section>
         <!-- end of new content -->
     </footer>
-||||||| 7af9a4e
-
-=======
     <!-- start of new content -->
 <aside>
     <h2>About Me</h2>
@@ -48,7 +44,6 @@
 <aside>
     hi i love to sleep and learn new things 
 </aside>
->>>>>>> sidebar
     <footer>
         Made with ♥ @ Udacity
     </footer>   
