--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script src="js/app.js"></script>
     <header>
-        <h1>hi hi master branch heading  </h1>
+        <h1>quest </h1>
     </header>
     <div class="container">
         <main>
