heading changed to the crusade

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script src="js/app.js"></script>
     <header>
-        <h1>quest </h1>
+        <h1>crusade </h1>
     </header>
     <div class="container">
         <main>
